--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "dva-core": "^1.1.0",
     "react": "16.0.0",
     "react-native": "^0.51.0",
+    "react-native-blur": "^3.2.2",
     "react-native-drawer": "^2.5.0",
+    "react-native-htmlview": "^0.12.1",
     "react-native-linear-gradient": "^2.4.0",
+    "react-native-modal": "^4.1.1",
     "react-native-root-toast": "^3.0.0",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.5.0",
