--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react-native": "^0.51.0",
     "react-native-blur": "^3.2.2",
     "react-native-drawer": "^2.5.0",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-linear-gradient": "^2.4.0",
     "react-native-modal": "^4.1.1",
+    "react-native-modalbox": "^1.4.2",
     "react-native-render-html": "^3.6.0",
     "react-native-root-toast": "^3.0.0",
     "react-native-swiper": "^1.5.13",
