--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-root-toast": "^3.0.0",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.5.0",
+    "react-native-wkwebview-reborn": "^1.10.0",
     "react-navigation": "^1.0.0-beta.21",
     "react-redux": "^5.0.6",
     "whatwg-fetch": "^2.0.3"
