--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "dva-core": "^1.1.0",
+    "js-base64": "^2.4.3",
     "react": "16.0.0",
     "react-native": "^0.51.0",
     "react-native-blur": "^3.2.2",
