--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,10 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-linear-gradient')
+    compile project(':react-native-image-picker')
+    compile project(':react-native-blur')
     compile project(':react-native-image-picker')
     compile project(':react-native-blur')
     compile project(':react-native-linear-gradient')
