--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-linear-gradient": "^2.4.0",
     "react-native-modal": "^4.1.1",
-    "react-native-render-html": "^3.6.0",
     "react-native-root-toast": "^3.0.0",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.5.0",
     "react-native-wkwebview-reborn": "^1.10.0",
-    "react-navigation": "^1.0.0-beta.21",
+    "react-navigation": "^1.0.3",
+    "react-navigation-redux-helpers": "^1.0.1",
     "react-redux": "^5.0.6",
     "whatwg-fetch": "^2.0.3"
   },
