--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -141,6 +141,10 @@ dependencies {
     compile project(':react-native-linear-gradient')
     compile project(':react-native-image-picker')
     compile project(':react-native-blur')
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-linear-gradient')
+    compile project(':react-native-image-picker')
+    compile project(':react-native-blur')
     compile project(':react-native-image-picker')
     compile project(':react-native-blur')
     compile project(':react-native-linear-gradient')
