--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "format": "yarn prettier && yarn lint -- --fix"
   },
   "dependencies": {
+    "buffer": "^5.1.0",
     "dva-core": "^1.1.0",
+    "es2015": "0.0.0",
     "js-base64": "^2.4.3",
     "react": "16.0.0",
     "react-native": "^0.51.0",
@@ -33,6 +35,7 @@
     "babel-eslint": "^8.0.3",
     "babel-jest": "^21.2.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react-native": "^4.0.0",
     "eslint": "^4.13.0",
     "eslint-config-airbnb": "^16.1.0",
